syntax = "proto3";

package api.v1;

import "google/protobuf/timestamp.proto";
import "buf/validate/validate.proto";

message SignupRequest {
  string email = 1 [(buf.validate.field).string.min_len = 2];
  string password = 2;
}

message SignupResponse {
  string access_token = 1;
  string refresh_token = 2;
}

service AuthService {
  rpc Signup(SignupRequest) returns (SignupResponse) {}
}
